Changes to ensure security